# Data-Science-For-Beginners-from-scratch-SENATOROV

./: .gitignore  README.md  environment.yml  log.ipynb  pyproject.toml  quiz.ipynb  quiz.py  quiz2.ipynb  quiz2.py  requirements.txt
git/: stash.ipynb  stash.py
github/: opensource.ipynb  opensource.py  quiz.ipynb  quiz.py
python/: commits.ipynb  commits.py  issues.ipynb  issues.py  venv.ipynb  venv.py
